<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.6.7</version>
    <relativePath />
    <!-- lookup parent from repository -->
  </parent>
  <groupId>ca.on.oicr.gsi</groupId>
  <artifactId>dimsum</artifactId>
  <version>1.32.1-SNAPSHOT</version>
  <name>Dimsum</name>
  <description>QC Tracking Dashboard</description>
  <properties>
    <java.version>17</java.version>
    <poi.version>5.2.3</poi.version>
  </properties>

  <distributionManagement>
    <repository>
      <id>deploy.artifacts.oicr</id>
      <name>GSI Releases</name>
      <url>https://artifacts.oicr.on.ca/artifactory/gsi-release</url>
    </repository>
    <downloadUrl>https://artifacts.oicr.on.ca/artifactory/gsi-release</downloadUrl>
  </distributionManagement>

  <repositories>
    <repository>
      <id>atlassian-public</id>
      <url>https://packages.atlassian.com/content/repositories/atlassian-public/</url>
    </repository>
    <repository>
      <id>atlassian-maven-external</id>
      <url>https://packages.atlassian.com/mvn/maven-external/</url>
    </repository>
    <repository>
      <id>artifacts-gsi-release</id>
      <url>https://artifacts.oicr.on.ca/artifactory/gsi-release/</url>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <!-- keeps Jackson dependencies in sync -->
        <groupId>com.fasterxml.jackson</groupId>
        <artifactId>jackson-bom</artifactId>
        <version>2.13.2.20220328</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <!-- keeps Spring dependencies in sync -->
        <groupId>org.springframework</groupId>
        <artifactId>spring-framework-bom</artifactId>
        <version>5.3.19</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>com.atlassian.jira</groupId>
      <artifactId>jira-rest-java-client-core</artifactId>
      <version>5.2.4</version>
    </dependency>
    <dependency>
      <!-- Needed by jira-rest-java-client-core (scope:provided) -->
      <groupId>io.atlassian.fugue</groupId>
      <artifactId>fugue</artifactId>
      <version>4.7.2</version>
    </dependency>
    <dependency>
      <groupId>io.micrometer</groupId>
      <artifactId>micrometer-registry-prometheus</artifactId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>nz.net.ultraq.thymeleaf</groupId>
      <artifactId>thymeleaf-layout-dialect</artifactId>
      <version>3.1.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi</artifactId>
      <version>${poi.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi-ooxml</artifactId>
      <version>${poi.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-thymeleaf</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-webflux</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-saml2-service-provider</artifactId>
    </dependency>
    <dependency>
      <groupId>org.thymeleaf.extras</groupId>
      <artifactId>thymeleaf-extras-springsecurity5</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>ca.on.oicr.gsi.cardea</groupId>
      <artifactId>cardea-data</artifactId>
      <version>1.11.0</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <executable>true</executable>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.0.0</version>
        <executions>
          <execution>
            <id>npm-build</id>
            <phase>generate-resources</phase>
            <goals>
              <goal>exec</goal>
            </goals>
            <configuration>
              <executable>npm</executable>
              <arguments>
                <argument>run</argument>
                <argument>build</argument>
              </arguments>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <!-- explicitly control property locations, so local config is never included -->
          <argLine>
            -Dspring.config.location=classpath:/application.yml,classpath:/application-noauth.yml,classpath:/application-test.properties</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
